sidebar not clicking on mobile view fix

--- a/src/components/market/market.module.css
+++ b/src/components/market/market.module.css
@@ -61,8 +61,7 @@
   .wrapper{
     flex-direction: column;
     align-items: center;
-    height: 90%;
-    background-color: red;
+    height: 88%;
   }
   .internal{
     height: 50%;
